Expanding docs. Fixing logic for Get...ByID.
